# alert-analysis-llm

./: README.md  docker-compose.yml  pyproject.toml
config/: ingest.yaml  orchestrator.yaml  rca.yaml
docker/: ingest.Dockerfile  orchestrator.Dockerfile  rca.Dockerfile
docs/: runbook.md
policies/: remediation_policies.yaml
services/common/: config.py  logging.py  metrics.py  models.py
services/ingest/: email_parser.py  imap_worker.py  main.py  msgraph_worker.py
services/orchestrator/: cache.py  main.py  policy.py
services/rca/: client.py  main.py
